# cnpj_scrapper

./: pyproject.toml
cnpjs/: cnpjs_info.py
data/: cnae_fiscal_descricao.xlsx  cnpjs.csv  cnpjs.xlsx  dados_clientes_pj.xlsx  porte.xlsx
